--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -44,6 +44,17 @@
   		<servlet-name>login</servlet-name>
   		<url-pattern>/login.do</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+  		<servlet-name>mypost</servlet-name>
+  		<servlet-class>basic.PostFormServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  		<servlet-name>mypost</servlet-name>
+  		<url-pattern>/mypost.do</url-pattern>
+  </servlet-mapping>
+
+  
 </web-app>
 
 
